<resources>
    <string name="app_name">周记</string>
    <string name="text_main">主界面</string>
    <string name="text_guide">引导页</string>
    <string name="text_login">登录页</string>
    <string name="text_modify">修改密码</string>
    <string name="text_register">注册页面</string>
    <string name="text_setting">设置页</string>
    <string name="text_edit">编辑页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_update">修改页</string>
    <string name="text_modify_user">用户修改信息页</string>
    <string name="text_about">关于</string>
    <string name="copyright_layout">Copyright 2017 Zsj All Rights Reserved.</string>
    <string name="versioncoe_layout">版本号：1.0</string>
    <string name="title_layout">标题</string>
    <string name="data_layout">2016/12/06</string>
    <string name="modifyPassword_layout">修改密码</string>
    <string name="oldPassword_layout">旧密码</string>
    <string name="newPasssword_layout">新密码</string>
    <string name="newPassword1_layout">确认密码</string>
    <string name="sureModifyPasswor_layout">确认修改</string>
    <string name="forgetPassword_layout">忘记密码</string>
    <string name="email_layout">输入邮箱</string>
    <string name="username_layout">用户名</string>
    <string name="password_layout">密码</string>
    <string name="savePassword_layout">记住密码</string>
    <string name="login_layout">登陆</string>
    <string name="register_layout">前往注册</string>
    <string name="desc_layout">简介</string>
    <string name="update_layout">更新</string>
    <string name="exit_layout">退出</string>
    <string name="register">注册</string>
    <string name="mainPage_layout">主界面</string>
    <string name="onlyShowWeekTask">仅显示本周任务</string>
    <string name="layout">布局方式</string>
    <string name="backgroundColor">更换背景颜色</string>
    <string name="backupAndRestore">备份与还原</string>
    <string name="localBackup">本地备份数据</string>
    <string name="locakRestore">本地恢复数据</string>
    <string name="cloudBackupAndRestore">云端备份与恢复数据</string>
    <string name="delete">清空</string>
    <string name="deleteAll">清空记录</string>
    <string name="other">其他</string>
    <string name="notification">智能提醒</string>
    <string name="back">返回</string>
    <string name="writeTask">记录你的一周任务</string>
    <string name="content_layout">内容</string>
    <string name="alreadyFinish">标记为已完成</string>
    <string name="delayNextDay">推延一天</string>
    <string name="editTAsk">编辑任务</string>
    <string name="deleteTask">删除任务</string>
    <string name="camera">拍照</string>
    <string name="pictures">图库</string>
    <string name="cancle">取消</string>
    <string name="logining">正在登陆...</string>
    <string name="modifyUser">点击头像修改个人信息</string>
    <string name="everydayGoal">每天有个小目标</string>
    <string name="comeonBaby">快来开始你的任务定制吧</string>
    <string name="everyweekBigGoal">每周一个大目标</string>
    <string name="startWrite">开始你的记录吧</string>
    <string name="writeTitleAndContent">请输入标题和内容</string>
    <string name="saveSuccess">保存成功</string>
    <string name="writeRightEmail">请输入正确的邮箱号</string>
    <string name="modifySuccess">修改成功</string>
    <string name="passwordModifyFailed">修改密码失败，请检查输入是否有误</string>
    <string name="twoPasswordNotSame">两次密码输入不一致</string>
    <string name="sendEmailSuccess">邮件发送成功，注意查收</string>
    <string name="sendEmailFailed">邮件发送失败</string>
    <string name="usernameNotNull">用户名输入不能为空</string>
    <string name="writePasswordNotNull">密码输入不能为空</string>
    <string name="writeRightUsernameAndPassword">请正确输入用户名或密码</string>
    <string name="loginSuccess">登录成功</string>
    <string name="verifyEmail">请去您的邮箱进行验证</string>
    <string name="errorUserameOrPassword">用户名或密码错误</string>
    <string name="dataNull">数据为空</string>
    <string name="nothingDesc">这个人很赖，什么都没有留下...</string>
    <string name="updateSuccess">更新成功</string>
    <string name="updataFailed">更新失败</string>
    <string name="writeNewPasswordNotNull">确认密码不能为空</string>
    <string name="emailNotNUll">邮件不能为空</string>
    <string name="error">输入信息有误</string>
    <string name="LoginSuccess">您已注册成功！</string>
    <string name="plaeaseLogin">请登录</string>
    <string name="registerFail">注册失败</string>
    <string name="localBackUpFailed">本地备份失败</string>
    <string name="localBackUpSuccess">本地备份成功</string>
    <string name="localResftoreSuccess">本地恢复成功</string>
    <string name="requestLocalBackup">您要备份数据到本地吗？</string>
    <string name="sure">确定</string>
    <string name="requestRestore">您要恢复数据到周记吗？</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="requestDeleteALl">您要删除所有记录吗？</string>
    <string name="deleteDataSuccess">数据删除成功</string>
    <string name="nullDataDelete">无数据可删除</string>
    <string name="Backing">备份中...</string>
    <string name="linear">列表展示</string>
    <string name="grid">网格展示</string>
    <string name="seeOrModify">查看或修改</string>

</resources>
