<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp">


    <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@mipmap/ic_zhou"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mTextInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
        >
        <EditText
            android:id="@+id/et_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username_layout"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mTextInputLayoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:gravity="right"
       >
        <EditText
            android:id="@+id/et_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_layout" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/save_pasword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savePassword_layout"
            android:textColor="@color/blank"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_layout"
        android:textColor="@android:color/black"
        android:background="@drawable/button_bg"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="5dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register_layout"
        android:layout_gravity="right"
        android:textColor="@android:color/black"
        android:background="@drawable/button_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword_layout"
            android:textColor="@color/blank"
            android:layout_gravity="right"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:id="@+id/tv_forget_password"/>

    </LinearLayout>


</LinearLayout>
